src/scss/_header.scss
.header {
  position: fixed;
  top: var(--gutter);
  right: var(--gutter);
  z-index: 10;
  &.--active {
    .header__hamburger {
      span {
        &:nth-of-type(1) {
          transform: translateY(7px) rotate(45deg);
        }
        &:nth-of-type(2) {
          opacity: 0;
        }
        &:nth-of-type(3) {
          transform: translateY(-7px) rotate(-45deg);
        }
      }
    }
    .header__nav {
      opacity: 1;
      pointer-events: initial;
      &-content {
        transform: translateX(0);
      }
    }
  }
  &__hamburger {
    height: 48px;
    width: 48px;
    aspect-ratio: 1 / 1;
    background-color: var(--bg-primary-color);
    position: relative;
    border-radius: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    gap: 6px;
    cursor: pointer;
    z-index: 11;
    span {
      display: block;
      width: 60%;
      height: 1px;
      background-color: var(--white-color);
      transition-duration: 0.3s;
    }
  }
  &__nav {
    position: fixed;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    background-color: rgba($color: #000000, $alpha: 0.5);
    z-index: 10;
    opacity: 0;
    pointer-events: none;
    transition-duration: 0.3s;
    transition-timing-function: ease-in-out;
    &-content {
      padding-top: 130px;
      padding-left: calc(var(--gutter) * 2);
      position: absolute;
      right: 0;
      background-color: var(--bg-secondary-color);
      width: 50%;
      height: 100%;
      transform: translateX(100%);
      transition-duration: 0.3s;
      transition-timing-function: ease-in-out;
      &::before {
        content: "";
        position: fixed;
        top: 0;
        left: 0;
        bottom: 0;
        width: 100%;
        height: 100%;
        background: url("../assets/images/noise.svg");
        z-index: 1;
        opacity: var(--noise-opacity);
        pointer-events: none;
      }
      .item {
        text-transform: capitalize;
        font-size: var(--fs-title-xl);
        font-family: var(--ff-bold);
        transition: all 0.3s;
        display: flex;
        align-items: center;
        justify-content: flex-start;
        gap: var(--gutter);
        position: relative;
        &::before {
          content: "";
          display: block;
          height: calc(var(--fs-title-xl) / 6);
          aspect-ratio: 1 / 1;
          border-radius: 100%;
          background-color: var(--bg-primary-color);
          transform: translateX(calc(var(--gutter) * -1));
          transition: all 0.3s;
          opacity: 0;
          position: absolute;
          left: calc(var(--gutter) * -1);
          top: 50%;
          transform: translateY(-50%);
        }
        &:hover {
          color: var(--bg-primary-color);
          transform: translateX(calc(var(--gutter) * 2));
          &::before {
            transform: translateX(0);
            opacity: 1;
          }
        }
      }
      .contact {
        margin-top: calc(var(--gutter) * 3);
        .email {
          &__title {
            font-family: var(--ff-semibold);
            color: var(--primary-color);
            text-decoration: underline;
          }
          &__text {
            font-family: var(--ff-regular);
            font-size: var(--fs-caption-xl);
          }
        }
        .btngroup {
          margin-top: calc(var(--gutter) * 2);
          display: flex;
          align-items: center;
          gap: var(--gutter);
          .btn {
            margin: initial;
          }
        }
      }
    }
  }
}

